@@ -9,7 +9,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.StringJoiner;
 
 import org.eclipse.core.commands.ExecutionException;
@@ -29,27 +28,35 @@ import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.emf.ecore.resource.impl.ResourceSetImpl;
 import org.eclipse.emf.ecore.xmi.impl.XMIResourceFactoryImpl;
 import org.eclipse.jface.dialogs.MessageDialog;
+import org.eclipse.swt.widgets.Shell;
 import org.eclipse.ui.PlatformUI;
-
-import com.github.javaparser.StaticJavaParser;
-import com.github.javaparser.ast.CompilationUnit;
-import com.github.javaparser.ast.NodeList;
-import com.github.javaparser.ast.body.FieldDeclaration;
-import com.github.javaparser.ast.body.MethodDeclaration;
-import com.github.javaparser.ast.body.Parameter;
-import com.github.javaparser.ast.body.VariableDeclarator;
-import com.github.javaparser.ast.comments.Comment;
-import com.github.javaparser.ast.expr.Expression;
-import com.github.javaparser.ast.expr.VariableDeclarationExpr;
-import com.github.javaparser.ast.stmt.AssertStmt;
-import com.github.javaparser.ast.stmt.ExpressionStmt;
-import com.github.javaparser.ast.stmt.ForStmt;
-import com.github.javaparser.ast.stmt.IfStmt;
-import com.github.javaparser.ast.stmt.ReturnStmt;
-import com.github.javaparser.ast.stmt.Statement;
-import com.github.javaparser.ast.stmt.SwitchEntry;
-import com.github.javaparser.ast.stmt.SwitchStmt;
-import com.github.javaparser.ast.stmt.WhileStmt;
+import org.emftext.commons.layout.LayoutInformation;
+import org.emftext.language.java.arrays.ArrayDimension;
+import org.emftext.language.java.classifiers.impl.ClassImpl;
+import org.emftext.language.java.containers.CompilationUnit;
+import org.emftext.language.java.expressions.Expression;
+import org.emftext.language.java.members.ClassMethod;
+import org.emftext.language.java.members.Member;
+import org.emftext.language.java.members.impl.FieldImpl;
+import org.emftext.language.java.parameters.Parameter;
+import org.emftext.language.java.resource.java.util.JavaResourceUtil;
+import org.emftext.language.java.statements.Assert;
+import org.emftext.language.java.statements.ForLoop;
+import org.emftext.language.java.statements.LocalVariableStatement;
+import org.emftext.language.java.statements.Statement;
+import org.emftext.language.java.statements.WhileLoop;
+import org.emftext.language.java.statements.impl.BlockImpl;
+import org.emftext.language.java.statements.impl.ConditionImpl;
+import org.emftext.language.java.statements.impl.DefaultSwitchCaseImpl;
+import org.emftext.language.java.statements.impl.EmptyStatementImpl;
+import org.emftext.language.java.statements.impl.ExpressionStatementImpl;
+import org.emftext.language.java.statements.impl.NormalSwitchCaseImpl;
+import org.emftext.language.java.statements.impl.ReturnImpl;
+import org.emftext.language.java.statements.impl.SwitchImpl;
+import org.emftext.language.java.types.TypeReference;
+import org.emftext.language.java.types.impl.VoidImpl;
+import org.emftext.language.java.variables.LocalVariable;
+import org.emftext.language.java.variables.impl.VariableImpl;
 
 import de.tu_bs.cs.isf.cbc.cbcclass.CbcclassFactory;
 import de.tu_bs.cs.isf.cbc.cbcclass.CbcclassPackage;
@@ -104,115 +111,105 @@ public class GenerateModelFromCode {
 		String javaFileContent = readFileToString(iFile.getLocation().toPortableString());
 
 		readJMLAnnotations(javaFileContent, jmlMethodConditions);
-		
-		CompilationUnit compilationUnit = StaticJavaParser.parse(javaFileContent);
-		if (compilationUnit.getChildNodes().isEmpty()) {
+
+		EObject abstractSyntaxTreeRoot = JavaResourceUtil.getResourceContent(javaFileContent);
+		CompilationUnit compilationUnit = (CompilationUnit) abstractSyntaxTreeRoot;
+
+		if (compilationUnit.getClassifiers().isEmpty()
+				|| compilationUnit.getClassifiers().get(0).getMembers().isEmpty()) {
 			return;
 		}
-		
-		ClassOrInterfaceCollector collector = new ClassOrInterfaceCollector();
-		collector.visit(compilationUnit, null);
-		
-		/*
 		if (compilationUnit.getNamespacesAsString() != null && !compilationUnit.getNamespacesAsString().isEmpty()) {
 			packageName = compilationUnit.getNamespacesAsString().substring(0, compilationUnit.getNamespacesAsString().length()-1);
 		}
-		*/
-		
 		setupProjectStructure(iFile);
 		
 		ModelClass modelClass = instantiateModelClass(null);
 		modelClass.setJavaClassURI(URI.createFileURI(iFile.getProjectRelativePath().toPortableString()).toFileString());
 		modelClass.setPackage(packageName);
 		
-		if (!collector.getClassOrInterfaceDeclaration().isInterface()) {
-			for (FieldDeclaration fieldDeclaration : collector.getFields()) {
-				addFieldToList(fieldDeclaration);
-			}
-			
-			for (MethodDeclaration methodDeclaration : collector.getMethods()) {
-				Method method = CbcclassFactory.eINSTANCE.createMethod();
-				
-				Resource cbcmodelResource = setupProjectForCbCModel(method, methodDeclaration.getNameAsString());
-				
-				JavaVariables variables = CbcmodelFactory.eINSTANCE.createJavaVariables();
-				fillVariableList(variables, methodDeclaration);
+		if (compilationUnit.getClassifiers().get(0) instanceof ClassImpl) {
+			ClassImpl javaClass = (ClassImpl) compilationUnit.getClassifiers().get(0);
 
-				//String signature = buildSignatureString(classMethod, variables);
-				settingSignature(methodDeclaration, variables, method);
-
-				//get global conditions from existing diagram
-				GlobalConditions conditions = CbcmodelFactory.eINSTANCE.createGlobalConditions();
-				for (EObject obj : cbcmodelResource.getContents()) {
-					if (obj instanceof GlobalConditions) {
-						conditions = (GlobalConditions) obj;
-					}
+			for (Member member : javaClass.getMembers()) {
+				if (member instanceof FieldImpl) {
+					addFieldToList((FieldImpl) member);
 				}
 
-				CbCFormula formula = createFormula(methodDeclaration.getNameAsString());
-				formula.setClassName(className);
-				formula.setMethodName(method.getName());
-				method.setCbcStartTriple(formula);
-				formula.setMethodObj(method);
-				variables.eSet(CbcmodelPackage.eINSTANCE.getJavaVariables_Fields(), fields);
-				
-				//parse JML contract to pre- and postconditions of cbcFormula
-				String defaultAnnotation = "	/*@\r\n" + "	  @ public normal_behavior\r\n"
-						+ "	  @ requires true;\r\n" + "	  @ ensures true;\r\n" + "	  @ assignable \\nothing;\r\n"
-						+ "	  @*/";
-				String jmlAnnotation;
-				Optional<Comment> comment = methodDeclaration.getComment();
-				if (!comment.isPresent()) {
-					jmlAnnotation = defaultAnnotation;
-				} else {
-					jmlAnnotation = comment.get().toString();
-					if (!jmlAnnotation.contains("/*@")) {
+				if (member instanceof ClassMethod) {
+					ClassMethod classMethod = (ClassMethod) member;
+					String methodName = classMethod.getName();
+					
+					Method method = CbcclassFactory.eINSTANCE.createMethod();
+					
+					Resource cbcmodelResource = setupProjectForCbCModel(method, methodName);
+
+					JavaVariables variables = CbcmodelFactory.eINSTANCE.createJavaVariables();
+					fillVariableList(variables, classMethod);
+
+					//String signature = buildSignatureString(classMethod, variables);
+					settingSignature(classMethod, variables, method);
+
+					//get global conditions from existing diagram
+					GlobalConditions conditions = CbcmodelFactory.eINSTANCE.createGlobalConditions();
+					for (EObject obj : cbcmodelResource.getContents()) {
+						if (obj instanceof GlobalConditions) {
+							conditions = (GlobalConditions) obj;
+						}
+					}
+
+					CbCFormula formula = createFormula(classMethod.getName());
+					formula.setClassName(className);
+					formula.setMethodName(method.getName());
+					method.setCbcStartTriple(formula);
+					formula.setMethodObj(method);
+					variables.eSet(CbcmodelPackage.eINSTANCE.getJavaVariables_Fields(), fields);
+					
+					//parse JML contract to pre- and postconditions of cbcFormula
+					String defaultAnnotation = "	/*@\r\n" + "	  @ public normal_behavior\r\n"
+							+ "	  @ requires true;\r\n" + "	  @ ensures true;\r\n" + "	  @ assignable \nothing;\r\n"
+							+ "	  @*/";
+					String jmlAnnotation = classMethod.getAnnotationsAndModifiers().get(0).getLayoutInformations()
+							.get(0).getHiddenTokenText();
+					if (!jmlAnnotation.contains("/*@"))
 						jmlAnnotation = defaultAnnotation;
+					int index = 0;
+
+					do {
+						String currentJmlPart = "";
+						index = jmlAnnotation.indexOf("also");
+						if (index != -1) {
+							currentJmlPart = jmlAnnotation.substring(0, index);
+						} else {
+							currentJmlPart = jmlAnnotation;
+						}
+						jmlAnnotation = jmlAnnotation.substring(index + 4);
+
+						addConditionsToFormula(formula, currentJmlPart, variables, method, conditions);
+
+					} while (index != -1);
+					
+					cbcmodelResource.getContents().clear();
+					cbcmodelResource.getContents().add(formula);
+					cbcmodelResource.getContents().add(variables);
+					cbcmodelResource.getContents().add(conditions);
+					methods.add(method);
+
+					EList<Statement> listOfStatements = new BasicEList<Statement>();
+					for (int j = 0; j < classMethod.getStatements().size(); j++) {
+						listOfStatements.add(null);
 					}
-				}
-				int index = 0;
-
-				do {
-					String currentJmlPart = "";
-					index = jmlAnnotation.indexOf("also");
-					if (index != -1) {
-						currentJmlPart = jmlAnnotation.substring(0, index);
-					} else {
-						currentJmlPart = jmlAnnotation;
+					Collections.copy(listOfStatements, classMethod.getStatements());
+					handleListOfStatements(cbcmodelResource, listOfStatements, formula.getStatement());					
+					for (int i = 0; i < variables.getVariables().size(); i++) {
+						JavaVariable var = variables.getVariables().get(i);
+						if (var.getKind().equals(VariableKind.PARAM) || var.getKind().equals(VariableKind.RETURN)) {
+							variables.getVariables().remove(var);
+							i--;
+						}
 					}
-					jmlAnnotation = jmlAnnotation.substring(index + 4);
-
-					addConditionsToFormula(formula, currentJmlPart, variables, conditions);
-
-				} while (index != -1);
-				
-				cbcmodelResource.getContents().clear();
-				cbcmodelResource.getContents().add(formula);
-				cbcmodelResource.getContents().add(variables);
-				cbcmodelResource.getContents().add(conditions);
-				methods.add(method);
-
-				EList<Statement> listOfStatements = new BasicEList<Statement>();
-				EList<Statement> listOfAssertStatements = new BasicEList<Statement>();
-				StatementsCollector statementsCollector = new StatementsCollector();
-				statementsCollector.visit(methodDeclaration, null);
-				for (int j = 0; j < statementsCollector.getStatements().size(); j++) {
-					listOfStatements.add(null);
+					cbcmodelResources.add(cbcmodelResource);
 				}
-				for (int u = 0; u < statementsCollector.getAssertStatements().size(); u++) {
-					listOfAssertStatements.add(null);
-				}
-				Collections.copy(listOfStatements, statementsCollector.getStatements());
-				Collections.copy(listOfAssertStatements, statementsCollector.getAssertStatements());
-				handleListOfStatements(cbcmodelResource, listOfStatements, listOfAssertStatements, formula.getStatement());					
-				for (int i = 0; i < variables.getVariables().size(); i++) {
-					JavaVariable var = variables.getVariables().get(i);
-					if (var.getKind().equals(VariableKind.PARAM) || var.getKind().equals(VariableKind.RETURN)) {
-						variables.getVariables().remove(var);
-						i--;
-					}
-				}
-				cbcmodelResources.add(cbcmodelResource);
 			}
 			modelClass.eSet(CbcclassPackage.eINSTANCE.getModelClass_Methods(), methods);
 			modelClass.eSet(CbcclassPackage.eINSTANCE.getModelClass_Fields(), fields);
@@ -226,7 +223,10 @@ public class GenerateModelFromCode {
 				GenerateDiagramFromModel gdfm = new GenerateDiagramFromModel();
 				gdfm.execute(cbcmodelResource);
 			}
+			
+			
 		}
+
 	}
 
 	public ModelClass instantiateModelClass(String methodName) throws ExecutionException{
@@ -295,41 +295,63 @@ public class GenerateModelFromCode {
 		return cbcmodelResource;
 	}
 
-	public void fillVariableList(JavaVariables variables, MethodDeclaration methodDec) {
+	public void fillVariableList(JavaVariables variables, ClassMethod classMethod) {
 		// add parameters to variables
-		
-		for (Parameter p : methodDec.getParameters()) {
-			addToVariables(new VariableDeclarator(p.getType(), p.getName()), variables, VariableKind.PARAM);
+		for (Parameter p : classMethod.getParameters()) {
+			addToVariables((VariableImpl) p, variables, VariableKind.PARAM);
 		}
-		
-		com.github.javaparser.ast.type.Type type = methodDec.getType();
-		if (!type.isVoidType()) {
+
+		TypeReference type = classMethod.getTypeReference();
+		String typeString = JavaResourceUtil.getText(type);
+		if (!(type instanceof VoidImpl)) {
+			String arrayDimensions = "";
+			if (classMethod.getArrayDimensionsBefore() != null) {
+				for (ArrayDimension ad : classMethod.getArrayDimensionsBefore()) {
+					for (LayoutInformation li : ad.getLayoutInformations()) {
+						arrayDimensions = arrayDimensions + li.getVisibleTokenText();
+					}
+				}
+			}
 			JavaVariable variable = CbcmodelFactory.eINSTANCE.createJavaVariable();
-			String typeString = methodDec.getTypeAsString();
+			typeString = JavaResourceUtil.getText(type) + arrayDimensions;
 			variable.setName(typeString + " ret");
 			variable.setKind(VariableKind.RETURN);
 			variables.getVariables().add(variable);
 		}
-		
+
 	}
 
-	public void addFieldToList(FieldDeclaration fieldDec) {
+	public void addFieldToList(FieldImpl fieldImpl) {
+		String arrayTokens = "";
+		if (fieldImpl.getArrayDimensionsBefore().size() > 0) {
+			for (int k = 0; k < fieldImpl.getArrayDimensionsBefore().size(); k++) {
+				for (int j = 0; j < fieldImpl.getArrayDimensionsBefore().get(k).getLayoutInformations().size(); j++) {
+					arrayTokens = arrayTokens + fieldImpl.getArrayDimensionsBefore().get(k).getLayoutInformations()
+							.get(j).getVisibleTokenText();
+				}
+			}
+		}
 		Field field = CbcclassFactory.eINSTANCE.createField();
-		
-		NodeList<VariableDeclarator> varDec = fieldDec.getVariables();
-		field.setName(varDec.get(0).getNameAsString());
-		field.setType(varDec.get(0).getTypeAsString());
-		
-		if (fieldDec.isPrivate()) {
+		String type;
+		if (fieldImpl.getTypeReference().getLayoutInformations().size() > 0) {
+			type = fieldImpl.getTypeReference().getLayoutInformations().get(0).getVisibleTokenText();
+		} else {
+			type = fieldImpl.getTypeReference().getPureClassifierReference().getLayoutInformations().get(0)
+					.getVisibleTokenText();
+		}
+		field.setName(fieldImpl.getName());
+		field.setType(type + arrayTokens);
+		if (fieldImpl.isPrivate()) {
 			field.setVisibility(Visibility.PRIVATE);
-		} else if (fieldDec.isProtected()) {
+		} else if (fieldImpl.isProtected()) {
 			field.setVisibility(Visibility.PROTECTED);
 		}
-		
-		if (fieldDec.isStatic()) {
+
+		if (fieldImpl.isStatic()) {
 			field.setIsStatic(true);
 		}
 		fields.add(field);
+
 	}
 
 	public void setupProjectStructure(IFile iFile) {
@@ -371,16 +393,16 @@ public class GenerateModelFromCode {
 		}
 	}
 
-	private String buildSignatureString(MethodDeclaration methodDec, JavaVariables variables) {
+	private String buildSignatureString(ClassMethod classMethod, JavaVariables variables) {
 		String signature = "";
-		if (methodDec.isPublic()) {
+		if (classMethod.isPublic()) {
 			signature += "public ";
-		} else if (methodDec.isPrivate()) {
+		} else if (classMethod.isPrivate()) {
 			signature += "private ";
-		} else if (methodDec.isProtected()) {
+		} else if (classMethod.isProtected()) {
 			signature += "protected ";
 		}
-		if (methodDec.isStatic()) {
+		if (classMethod.isStatic()) {
 			signature += "static ";
 		}
 
@@ -395,25 +417,25 @@ public class GenerateModelFromCode {
 			}
 		}
 
-		signature += returnType + " " + methodDec.getNameAsString() + "(" + sjParameters.toString() + ")";
+		signature += returnType + " " + classMethod.getName() + "(" + sjParameters.toString() + ")";
 
 		return signature;
 	}
 	
-	public void settingSignature(MethodDeclaration methodDec, JavaVariables variables, Method method) {
-		if (methodDec.isPublic()) {
+	public void settingSignature(ClassMethod classMethod, JavaVariables variables, Method method) {
+		if (classMethod.isPublic()) {
 			method.setVisibility(Visibility.PUBLIC);
-		} else if (methodDec.isPrivate()) {
+		} else if (classMethod.isPrivate()) {
 			method.setVisibility(Visibility.PRIVATE);
-		} else if (methodDec.isProtected()) {
+		} else if (classMethod.isProtected()) {
 			method.setVisibility(Visibility.PROTECTED);
 		}
-		if (methodDec.isStatic()) {
+		if (classMethod.isStatic()) {
 			method.setIsStatic(true);
 		}
 		
 		method.setReturnType("void");
-		method.setName(methodDec.getNameAsString());
+		method.setName(classMethod.getName());
 
 		for (JavaVariable v : variables.getVariables()) {
 			if (v.getKind().equals(VariableKind.PARAM)) {
@@ -441,10 +463,11 @@ public class GenerateModelFromCode {
 	 * @param variables
 	 * @param conditions
 	 */
-	public void addConditionsToFormula(CbCFormula formula, String jmlAnnotation, JavaVariables variables, GlobalConditions conditions) {
+	public void addConditionsToFormula(CbCFormula formula, String jmlAnnotation, JavaVariables variables,
+			Method method, GlobalConditions conditions) {
 		jmlAnnotation = replaceSpecialSymbols(jmlAnnotation);
 
-		//jmlAnnotation = cbcWorkaroundForOldKeyword(jmlAnnotation, variables, conditions);
+		jmlAnnotation = cbcWorkaroundForOldKeyword(jmlAnnotation, variables, conditions);
 
 		// adds pre condition
 		int startPre = jmlAnnotation.indexOf("requires");
@@ -480,16 +503,10 @@ public class GenerateModelFromCode {
 		postCond.setName(post);
 		formula.getPostCondition().setName(post);
 		formula.getStatement().getPostCondition().setName(post);
-		
-		// adds modifiables
-		int startMod = jmlAnnotation.indexOf("assignable");
-		int endMod = findEnd(jmlAnnotation, startMod);
-		for (String assign : jmlAnnotation.substring(startMod + 11, endMod).split(",")) {
-			formula.getStatement().getPostCondition().getModifiables().add(assign);
-		}
 	}
 
-	private String cbcWorkaroundForOldKeyword(String jmlAnnotation, JavaVariables variables, GlobalConditions conditions) {
+	private String cbcWorkaroundForOldKeyword(String jmlAnnotation, JavaVariables variables,
+			GlobalConditions conditions) {
 		int old = jmlAnnotation.indexOf("\\old");
 		while (old != -1) {
 			int endOld = findEndOfBracket(jmlAnnotation, old + 5);
@@ -696,7 +713,6 @@ public class GenerateModelFromCode {
 				name = oldPart;
 			}
 			newVariableName = "old_" + name;
-			newVariableName = "\\old" + "(" + oldPart + ")";
 			invariant = invariant.replace("\\old" + "(" + oldPart + ")", newVariableName + rest);
 			additionalPre.add(newVariableName + " = " + name);
 			old = invariant.indexOf("\\old", endOld + 5);
@@ -849,37 +865,29 @@ public class GenerateModelFromCode {
 	 * @param parent     the statements from the list should be connected to that
 	 *                   statement
 	 */
-	public void handleListOfStatements(Resource r, EList<Statement> statements, EList<Statement> assertStatements, AbstractStatement parent) throws ExecutionException {
+	public void handleListOfStatements(Resource r, EList<Statement> statements, AbstractStatement parent) throws ExecutionException {
 		if (statements.size() > 1) {
 			CompositionStatement composition = createComposition();
 			parent.setRefinement(composition);
 			
-			handleStatement(r, statements.get(0), assertStatements, composition.getFirstStatement());
-			int i = 0;
-			if(!assertStatements.isEmpty()) { // assert statements contain intermediate conditions
-				AssertStmt assertSt = assertStatements.get(0).asAssertStmt();
+			handleStatement(r, statements.get(0), composition.getFirstStatement());
+			int i = 1;
+			if(statements.get(1) instanceof Assert) { // assert statements contain intermediate conditions
+				Assert assertSt = (Assert) statements.get(1);
 				Condition intermediate = CbcmodelFactory.eINSTANCE.createCondition();
-				intermediate.setName(assertSt.toString());
+				intermediate.setName(JavaResourceUtil.getText(assertSt.getCondition()));
 				composition.setIntermediateCondition(intermediate);
-				i = 1;
+				i = 2;
 			}
 			UpdateConditionsOfChildren.updateRefinedStatement(parent, composition);
-			
-			BasicEList<Statement> newAssertStatementList = new BasicEList<Statement>();
-			while (i < assertStatements.size()) {
-				newAssertStatementList.add(assertStatements.get(i));
+			BasicEList<Statement> newStatementList = new BasicEList<Statement>();
+			while (i < statements.size()) {
+				newStatementList.add(statements.get(i));
 				i++;
 			}
-			
-			BasicEList<Statement> newStatementList = new BasicEList<Statement>();
-			int j = 1;
-			while (j < statements.size()) {
-				newStatementList.add(statements.get(j));
-				j++;
-			}
-			handleListOfStatements(r, newStatementList, newAssertStatementList, composition.getSecondStatement());//Todo: throws Error
+			handleListOfStatements(r, newStatementList, composition.getSecondStatement());//Todo: throws Error
 		} else if (statements.size() == 1) {
-			handleStatement(r, statements.get(0), assertStatements, parent);
+			handleStatement(r, statements.get(0), parent);
 			
 		} else {
 			SkipStatement skipStatement = createSkipStatement();
@@ -896,34 +904,28 @@ public class GenerateModelFromCode {
 	 * @param statement
 	 * @param parent
 	 */
-	private void handleStatement(Resource r, Statement statement, EList<Statement> assertStatements, AbstractStatement parent) throws ExecutionException {
-		if (statement.isExpressionStmt()) {
-			if (statement.asExpressionStmt().getExpression().isVariableDeclarationExpr()) {
-				VariableDeclarationExpr variableStmt = statement.asExpressionStmt().getExpression().asVariableDeclarationExpr();
-				NodeList<VariableDeclarator> varDec = variableStmt.getVariables();
-				String text = varDec.get(0).toString();
-				if (text.contains("=")) {
-					String firstPart = text.substring(0, text.indexOf("="));
-					int index = firstPart.lastIndexOf(varDec.get(0).getNameAsString());
-					text = text.substring(index);
-					AbstractStatement s = createStatement(text + ";");
-					parent.setRefinement(s);
-					UpdateConditionsOfChildren.updateRefinedStatement(parent, s);
-				} else {
-					SkipStatement skipStatement = createSkipStatement();
-					parent.setRefinement(skipStatement);
-					UpdateConditionsOfChildren.updateRefinedStatement(parent, skipStatement);
-				}
-				addToVariables(varDec.get(0), (JavaVariables) r.getContents().get(1), VariableKind.LOCAL);
-			} else {
-				ExpressionStmt expressionStmt = statement.asExpressionStmt();
-				AbstractStatement s = createStatement(expressionStmt.getExpression().toString() + ";");
+	private void handleStatement(Resource r, Statement statement, AbstractStatement parent) throws ExecutionException {
+		if (statement instanceof LocalVariableStatement) {
+			LocalVariableStatement variableStatement = (LocalVariableStatement) statement;
+			LocalVariable variable = variableStatement.getVariable();
+			String text = JavaResourceUtil.getText(variable);
+			if (text.contains("=")) {
+				String firstPart = text.substring(0, text.indexOf("="));
+				int index = firstPart.lastIndexOf(variable.getName());
+				text = text.substring(index);
+				AbstractStatement s = createStatement(text + ";");
 				parent.setRefinement(s);
 				UpdateConditionsOfChildren.updateRefinedStatement(parent, s);
+			} else {
+				SkipStatement skipStatement = createSkipStatement();
+				parent.setRefinement(skipStatement);
+				UpdateConditionsOfChildren.updateRefinedStatement(parent, skipStatement);
 			}
-		} else if (statement.isWhileStmt()) {
-			WhileStmt whileStmt = statement.asWhileStmt();
-			String conditionString = whileStmt.getCondition().toString();
+			addToVariables((VariableImpl) variable, (JavaVariables) r.getContents().get(1), VariableKind.LOCAL);
+		} else if (statement instanceof WhileLoop) {
+			WhileLoop loop = (WhileLoop) statement;
+			Expression condition = loop.getCondition();
+			String conditionString = JavaResourceUtil.getText(condition);
 			conditionString = conditionString.replace("==", "=");
 			conditionString = conditionString.replace("&&", "&");
 			conditionString = conditionString.replace("||", "|");
@@ -936,19 +938,16 @@ public class GenerateModelFromCode {
 			
 			parent.setRefinement(repStatement);
 			UpdateConditionsOfChildren.updateRefinedStatement(parent, repStatement);
-			if (whileStmt.getBody().isBlockStmt()) {
-				EList<Statement> whileBlock = new BasicEList<Statement>();
-				for (Statement stmt : whileStmt.getBody().asBlockStmt().getStatements()) {
-					whileBlock.add(stmt);
-				}
-				handleListOfStatements(r, whileBlock, assertStatements, repStatement.getLoopStatement());
+			if (loop.getStatement() instanceof BlockImpl) {
+				BlockImpl block = (BlockImpl) loop.getStatement();
+				handleListOfStatements(r, block.getStatements(), repStatement.getLoopStatement());
 			}
-		} else if (statement.isIfStmt()) {
-			IfStmt ifStat = statement.asIfStmt();
-			Optional<Statement> elseStat = ifStat.getElseStmt();
+		} else if (statement instanceof ConditionImpl) {
+			ConditionImpl conditionImpl = (ConditionImpl) statement;
+			Expression condition1 = conditionImpl.getCondition();
 			// also nicht mehrere else ifs
-			if (elseStat.isPresent() && !elseStat.get().isIfStmt()) {
-				String conditionString = ifStat.getCondition().toString();
+			if (!(conditionImpl.getElseStatement() instanceof ConditionImpl)) {
+				String conditionString = JavaResourceUtil.getText(condition1);
 				conditionString = conditionString.replace("==", "=");
 				conditionString = conditionString.replace("&&", "&");
 				conditionString = conditionString.replace("||", "|");
@@ -956,47 +955,39 @@ public class GenerateModelFromCode {
 						("!" + "(" + conditionString + ")"));
 				parent.setRefinement(selStatement);
 				UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
-				EList<Statement> ifBlock = new BasicEList<Statement>();
-				if (ifStat.getThenStmt().isBlockStmt()) {
-					for (Statement stmt : ifStat.getThenStmt().asBlockStmt().getStatements()) {
-						ifBlock.add(stmt);
-					}
-					handleListOfStatements(r, ifBlock, assertStatements, selStatement.getCommands().get(0));
+				if (conditionImpl.getStatement() instanceof BlockImpl) {
+					BlockImpl block = (BlockImpl) conditionImpl.getStatement();
+					handleListOfStatements(r, block.getStatements(), selStatement.getCommands().get(0));
 				} else {
 					SkipStatement skipStatement = createSkipStatement();
 					parent.setRefinement(skipStatement);
 					UpdateConditionsOfChildren.updateRefinedStatement(parent, skipStatement);
 				}
-				EList<Statement> elseBlock = new BasicEList<Statement>();
-				if (elseStat.get().isBlockStmt()) {
-					for (Statement stmt : elseStat.get().asBlockStmt().getStatements()) {
-					elseBlock.add(stmt);
-					}
-					handleListOfStatements(r, elseBlock, assertStatements, selStatement.getCommands().get(1));
+				if (conditionImpl.getElseStatement() instanceof BlockImpl) {
+					BlockImpl block = (BlockImpl) conditionImpl.getElseStatement();
+					handleListOfStatements(r, block.getStatements(), selStatement.getCommands().get(1));
 				} else {
 					SkipStatement skipStatement = createSkipStatement();
 					selStatement.getCommands().get(1).setRefinement(skipStatement);
 					UpdateConditionsOfChildren.updateRefinedStatement(selStatement.getCommands().get(1), skipStatement);
 				}
 			} else {
-				SelectionStatement selStatement = createMultiSelection(ifStat.getCondition().toString());
+				SelectionStatement selStatement = createMultiSelection(JavaResourceUtil.getText(condition1));
 				parent.setRefinement(selStatement);
 				UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
-				EList<Statement> selBlock = new BasicEList<Statement>();
-				if (ifStat.getThenStmt().isBlockStmt()) {
-					for (Statement stmt : ifStat.getThenStmt().asBlockStmt().getStatements()) {
-						selBlock.add(stmt);
-					}
-					handleListOfStatements(r, selBlock, assertStatements, selStatement.getCommands().get(0));
+				if (conditionImpl.getStatement() instanceof BlockImpl) {
+					BlockImpl block = (BlockImpl) conditionImpl.getStatement();
+					handleListOfStatements(r, block.getStatements(), selStatement.getCommands().get(0));
 				}
 				int i = 1;
-				while (ifStat.getElseStmt().isPresent() && ifStat.getElseStmt().get().isIfStmt()) {
-					IfStmt nextCondition = elseStat.get().asIfStmt();
+				while (conditionImpl.getElseStatement() instanceof ConditionImpl) {
+					ConditionImpl nextCondition = (ConditionImpl) conditionImpl.getElseStatement();
+					Expression condition = nextCondition.getCondition();
 					AbstractStatement nextStatement = CbcmodelFactory.eINSTANCE.createAbstractStatement();
 					nextStatement.setName("statement");
 					selStatement.getCommands().add(nextStatement);
 					Condition conditionNext = CbcmodelFactory.eINSTANCE.createCondition();
-					conditionNext.setName(nextCondition.getCondition().toString());
+					conditionNext.setName(JavaResourceUtil.getText(condition));
 					selStatement.getGuards().add(conditionNext);
 					Condition nextPre = CbcmodelFactory.eINSTANCE.createCondition();
 					nextPre.setName("");
@@ -1006,18 +997,15 @@ public class GenerateModelFromCode {
 					nextStatement.setPostCondition(nextPost);
 					UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
 					UpdateConditionsOfChildren.updateConditionsofChildren(nextPre);
-					if (ifStat.getThenStmt().isBlockStmt()) {
-						EList<Statement> privBlockStmts = new BasicEList<Statement>();
-						for (Statement stmt : ifStat.getThenStmt().asBlockStmt().getStatements()) {
-							privBlockStmts.add(stmt);
-						}
-						handleListOfStatements(r, privBlockStmts, assertStatements, selStatement.getCommands().get(i));
+					if (nextCondition.getStatement() instanceof BlockImpl) {
+						BlockImpl block = (BlockImpl) nextCondition.getStatement();
+						handleListOfStatements(r, block.getStatements(), selStatement.getCommands().get(i));
 					}
 					i++;
-					ifStat = nextCondition;
+					conditionImpl = nextCondition;
 				}
 
-				if (ifStat.getElseStmt().isPresent() && ifStat.getElseStmt().get().isBlockStmt()) {
+				if (conditionImpl.getElseStatement() instanceof BlockImpl) {
 					AbstractStatement nextStatement = CbcmodelFactory.eINSTANCE.createAbstractStatement();
 					nextStatement.setName("statement");
 					selStatement.getCommands().add(nextStatement);
@@ -1037,31 +1025,31 @@ public class GenerateModelFromCode {
 					nextStatement.setPostCondition(nextPost);
 					UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
 					UpdateConditionsOfChildren.updateConditionsofChildren(nextPre);
-					EList<Statement> privBlockStmts = new BasicEList<Statement>();
-					for (Statement stmt : ifStat.getThenStmt().asBlockStmt().getStatements()) {
-						privBlockStmts.add(stmt);
-					}
-					handleListOfStatements(r, privBlockStmts, assertStatements, selStatement.getCommands().get(i));
+					BlockImpl block = (BlockImpl) conditionImpl.getElseStatement();
+					handleListOfStatements(r, block.getStatements(), selStatement.getCommands().get(i));
 				}
 			}
 
-		} else if (statement.isReturnStmt()) {
-			ReturnStmt returnStmt = statement.asReturnStmt();
-			if (returnStmt.getExpression().isPresent()) {
-				ReturnStatement retStatement = createReturnStatement(
-						"ret = " + returnStmt.getExpression().get().toString() + ";");//"\\result = " + JavaResourceUtil.getText(returnImpl.getReturnValue()) + ";");
-				parent.setRefinement(retStatement);
-				UpdateConditionsOfChildren.updateRefinedStatement(parent, retStatement);
-			}
-		} else if (statement.isForStmt()) {
-			ForStmt forStmt = statement.asForStmt();
+		} else if (statement instanceof ReturnImpl) {
+			ReturnImpl returnImpl = (ReturnImpl) statement;
+			ReturnStatement retStatement = createReturnStatement(
+					"ret = " + JavaResourceUtil.getText(returnImpl.getReturnValue()) + ";");//"\\result = " + JavaResourceUtil.getText(returnImpl.getReturnValue()) + ";");
+			parent.setRefinement(retStatement);
+			UpdateConditionsOfChildren.updateRefinedStatement(parent, retStatement);
+		} else if (statement instanceof ExpressionStatementImpl) {
+			ExpressionStatementImpl exprStatement = (ExpressionStatementImpl) statement;
+			AbstractStatement s = createStatement(JavaResourceUtil.getText(exprStatement.getExpression()) + ";");
+			parent.setRefinement(s);
+			UpdateConditionsOfChildren.updateRefinedStatement(parent, s);
+		} else if (statement instanceof ForLoop) {
+			ForLoop loop = (ForLoop) statement;
 
 			CompositionStatement composition = createComposition();
 			parent.setRefinement(composition);
 			UpdateConditionsOfChildren.updateRefinedStatement(parent, composition);
 
 			// Initialization as first part of composition
-			String init = forStmt.getInitialization().get(0).toString();
+			String init = JavaResourceUtil.getText(loop.getInit());
 			AbstractStatement s = createStatement(init + ";");
 			composition.getFirstStatement().setRefinement(s);
 			UpdateConditionsOfChildren.updateRefinedStatement(composition.getFirstStatement(), s);
@@ -1070,10 +1058,7 @@ public class GenerateModelFromCode {
 			CompositionStatement composition2 = createComposition();
 			composition.getSecondStatement().setRefinement(composition2);
 			UpdateConditionsOfChildren.updateRefinedStatement(composition.getSecondStatement(), composition2);
-			String conditionString = "";
-			if (forStmt.getCompare().isPresent()) {
-				conditionString = forStmt.getCompare().toString();
-			}
+			String conditionString = JavaResourceUtil.getText(loop.getCondition());
 			conditionString = conditionString.replace("==", "=");
 			conditionString = conditionString.replace("&&", "&");
 			conditionString = conditionString.replace("||", "|");
@@ -1083,55 +1068,42 @@ public class GenerateModelFromCode {
 			UpdateConditionsOfChildren.updateRefinedStatement(composition2.getFirstStatement(), repStatement);
 
 			// loop variable update, pr�fen, ob ich mehrere updates haben kann
-			String update = forStmt.getUpdate().get(0).toString();
+			String update = JavaResourceUtil.getText(loop.getUpdates().get(0));
 			AbstractStatement updateStatement = createStatement(update + ";");
 			composition2.getSecondStatement().setRefinement(updateStatement);
 			UpdateConditionsOfChildren.updateRefinedStatement(composition2.getSecondStatement(), updateStatement);
 
-			EList<Statement> forBlock = new BasicEList<Statement>();
-			if (forStmt.getBody().isBlockStmt()) {
-				for (Statement stmt : forStmt.getBody().asBlockStmt().getStatements()) {
-					forBlock.add(stmt);
-				}
-				handleListOfStatements(r, forBlock, assertStatements, repStatement.getLoopStatement());
+			if (loop.getStatement() instanceof BlockImpl) {
+				BlockImpl block = (BlockImpl) loop.getStatement();
+				handleListOfStatements(r, block.getStatements(), repStatement.getLoopStatement());
 			}
-		} else if (statement.isSwitchStmt()) {
-			SwitchStmt switchStmt = statement.asSwitchStmt();
-			String switchVariable = switchStmt.getSelector().toString();
+		} else if (statement instanceof SwitchImpl) {
+			SwitchImpl switchCase = (SwitchImpl) statement;
+			String switchVariable = JavaResourceUtil.getText(switchCase.getVariable());
 			Expression firstCondition = null;
-			SwitchEntry sc = null;
+			NormalSwitchCaseImpl sc = null;
 
-			if (switchStmt.getEntry(0).getType().equals(SwitchEntry.Type.STATEMENT_GROUP)) {
-				sc = switchStmt.getEntry(0);
-				Optional<Expression> label = sc.getLabels().getFirst();
-				if (label.isPresent()) {
-					firstCondition = label.get();
-				}
+			if (switchCase.getCases().get(0) instanceof NormalSwitchCaseImpl) {
+				sc = (NormalSwitchCaseImpl) switchCase.getCases().get(0);
+				firstCondition = sc.getCondition();
 			}
+
 			SelectionStatement selStatement = createMultiSelection(
-					switchVariable + " = " + firstCondition.toString());
+					switchVariable + " = " + JavaResourceUtil.getText(firstCondition));
 			parent.setRefinement(selStatement);
 			UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
-			EList<Statement> switchStmts = new BasicEList<Statement>();
-			for (Statement stmt : sc.getStatements()) {
-				switchStmts.add(stmt);
-			}
-			handleListOfStatements(r, switchStmts, assertStatements, selStatement.getCommands().get(0));
+			handleListOfStatements(r, sc.getStatements(), selStatement.getCommands().get(0));
 
-			for (int i = 1; i < switchStmt.getEntries().size(); i++) {
-				if (switchStmt.getEntry(i).getType().equals(SwitchEntry.Type.STATEMENT_GROUP) && switchStmt.getEntry(i).getLabels().isNonEmpty()) {
-					SwitchEntry normalCase = switchStmt.getEntry(i);
-					Expression condition = null;
-					Optional<Expression> label = normalCase.getLabels().getFirst();
-					if (label.isPresent()) {
-						condition = label.get();
-					}
+			for (int i = 1; i < switchCase.getCases().size(); i++) {
+				if (switchCase.getCases().get(i) instanceof NormalSwitchCaseImpl) {
+					NormalSwitchCaseImpl normalCase = (NormalSwitchCaseImpl) switchCase.getCases().get(i);
+					Expression condition = normalCase.getCondition();
 
 					AbstractStatement nextStatement = CbcmodelFactory.eINSTANCE.createAbstractStatement();
 					nextStatement.setName("statement");
 					selStatement.getCommands().add(nextStatement);
 					Condition conditionNext = CbcmodelFactory.eINSTANCE.createCondition();
-					conditionNext.setName(switchVariable + " = " + condition.toString());
+					conditionNext.setName(switchVariable + " = " + JavaResourceUtil.getText(condition));
 					selStatement.getGuards().add(conditionNext);
 					Condition nextPre = CbcmodelFactory.eINSTANCE.createCondition();
 					nextPre.setName("");
@@ -1141,14 +1113,10 @@ public class GenerateModelFromCode {
 					nextStatement.setPostCondition(nextPost);
 					UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
 					UpdateConditionsOfChildren.updateConditionsofChildren(nextPre);
-					EList<Statement> nonEmptySwitchStmts = new BasicEList<Statement>();
-					for (Statement stmt : normalCase.getStatements()) {
-						nonEmptySwitchStmts.add(stmt);
-					}
-					handleListOfStatements(r, nonEmptySwitchStmts, assertStatements, nextStatement);
+					handleListOfStatements(r, normalCase.getStatements(), nextStatement);
 
-				} else if (switchStmt.getEntry(i).getType().equals(SwitchEntry.Type.STATEMENT_GROUP)) {
-					SwitchEntry defaultCase = switchStmt.getEntry(i);
+				} else if (switchCase.getCases().get(i) instanceof DefaultSwitchCaseImpl) {
+					DefaultSwitchCaseImpl defaultCase = (DefaultSwitchCaseImpl) switchCase.getCases().get(i);
 					String defaultCondition = "";
 					for (Condition guard : selStatement.getGuards()) {
 						defaultCondition = defaultCondition + "!(" + guard.getName() + ") & ";
@@ -1169,14 +1137,10 @@ public class GenerateModelFromCode {
 					nextStatement.setPostCondition(nextPost);
 					UpdateConditionsOfChildren.updateRefinedStatement(parent, selStatement);
 					UpdateConditionsOfChildren.updateConditionsofChildren(nextPre);
-					EList<Statement> maybeEmtpySwtichStmt = new BasicEList<Statement>();
-					for (Statement stmt : defaultCase.getStatements()) {
-						maybeEmtpySwtichStmt.add(stmt);
-					}
-					handleListOfStatements(r, maybeEmtpySwtichStmt, assertStatements, nextStatement);
+					handleListOfStatements(r, defaultCase.getStatements(), nextStatement);
 				}
 			}
-		} else if (statement.isEmptyStmt()) {
+		} else if (statement instanceof EmptyStatementImpl) {
 			SkipStatement skipStatement = createSkipStatement();
 			parent.setRefinement(skipStatement);
 			UpdateConditionsOfChildren.updateRefinedStatement(parent, skipStatement);
@@ -1185,9 +1149,25 @@ public class GenerateModelFromCode {
 	}
 
 	// adds variable to the list of JavaVariables
-	public void addToVariables(VariableDeclarator varDec, JavaVariables variableList, VariableKind kind) {
+	public void addToVariables(VariableImpl variable, JavaVariables variableList, VariableKind kind) {
+		String arrayTokens = "";
+		if (variable.getArrayDimensionsBefore().size() > 0) {
+			for (int k = 0; k < variable.getArrayDimensionsBefore().size(); k++) {
+				for (int j = 0; j < variable.getArrayDimensionsBefore().get(k).getLayoutInformations().size(); j++) {
+					arrayTokens = arrayTokens + variable.getArrayDimensionsBefore().get(k).getLayoutInformations()
+							.get(j).getVisibleTokenText();
+				}
+			}
+		}
 		JavaVariable javaVariable = CbcmodelFactory.eINSTANCE.createJavaVariable();
-		javaVariable.setName(varDec.getTypeAsString() + " " + varDec.getNameAsString());
+		String type;
+		if (variable.getTypeReference().getLayoutInformations().size() > 0) {
+			type = variable.getTypeReference().getLayoutInformations().get(0).getVisibleTokenText();
+		} else {
+			type = variable.getTypeReference().getPureClassifierReference().getLayoutInformations().get(0)
+					.getVisibleTokenText();
+		}
+		javaVariable.setName(type + arrayTokens + " " + variable.getName());
 		javaVariable.setKind(kind);
 		variableList.getVariables().add(javaVariable);
 	}
